hackdelft/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hackdelft
  namespace: hackdelft
spec:
  rules:
    - host: hackdelft.nl
      http:
        paths:
          - backend:
              serviceName: hackdelft-2022
              servicePort: http
    - host: hackdelft.com
      http:
        paths:
          - backend:
              serviceName: hackdelft-2022
              servicePort: http
    - host: 2022.hackdelft.nl
      http:
        paths:
          - backend:
              serviceName: hackdelft-2022
              servicePort: http
    - host: 2019.hackdelft.nl
      http:
        paths:
          - backend:
              serviceName: hackdelft-2019
              servicePort: http
    - host: 2018.hackdelft.nl
      http:
        paths:
          - backend:
              serviceName: hackdelft-2018
              servicePort: http
    - host: 2017.hackdelft.nl
      http:
        paths:
          - backend:
              serviceName: hackdelft-2017
              servicePort: http
  tls:
    - hosts:
        - hackdelft.nl
        - hackdelft.com
        - www.hackdelft.com
        - www.hackdelft.nl
        - 2022.hackdelft.nl
        - 2019.hackdelft.nl
        - 2018.hackdelft.nl
        - 2017.hackdelft.nl
      secretName: ingress-ext-tls
